Basics of flow control working
The stages of the (start of) experiment can now be controlled, to some
extend by the values in the `app.json` file

--- a/app/app.json
+++ b/app/app.json
@@ -18,8 +18,13 @@
     "consent": {
       "path": "consent.consent"
     },
+    "data_protection": {
+      "path": "data_protection.dataprotection",
+      "needs": ["consent"]
+    },
     "alert": {
-      "path": "alert.alert"
+      "path": "alert.alert",
+      "needs": ["consent", "data-protection"]
     }
   }
 }
